# double-helix

./: .gitignore  Cargo.toml  PHASE4_PLAN.md  README.md  base16_theme.toml  config.toml  install_log.txt  languages.toml  librust_out.rlib  rust-toolchain.toml  theme.toml  tombi.toml
.github/workflows/: build.yml  release.yml
book/src/: SUMMARY.md  assistant.md  building-from-source.md  command-line.md  configuration.md  editor.md  install.md  keymap.md  languages.md  package-manager.md  plugins.md  remapping.md  themes.md
contrib/: Helix.desktop  check-release-binary.py  dhx_launcher.sh
contrib/completion/: dhx.bash  dhx.fish  dhx.zsh
docs/: acp-agentic-panel-ux-spec.md  acp-api-architecture-spec.md  acp-event-validation.md  acp-status-validation.md  assistant-ux.md  collaboration-assistant-architecture-spec.md  crate-abstractions-and-event-buses-review.md  fff-devendor.md  layering-violations.md  package-manager-architecture-pass.md  package-manager.md  perf-notes.md  persistence-audit.md  pkg-ui-design.md  plugin-api-parity.md  plugin-architecture-review-and-refactor-spec.md  render-pipeline-revision-plan.md  responsive-application-architecture.md  runtime-architecture.md  runtime-collaboration-implementation-plan.md  runtime-executor-architecture-spec.md  ui-architecture-deepening-tasks.md  zed-acp-commands.md
helix-acp/: Cargo.toml
helix-acp/examples/: call_session_new.rs
helix-acp/src/: client.rs  jsonrpc.rs  lib.rs  registry.rs  terminal.rs  transport.rs  types.rs
helix-core/: Cargo.toml
helix-core/src/: command_line.rs  diagnostic.rs  doc_formatter.rs  lib.rs  line_ending.rs  match_brackets.rs  movement.rs  position.rs  selection.rs  syntax.rs  text_annotations.rs  text_folding.rs  textobject.rs  versioned.rs
helix-dap/: Cargo.toml
helix-dap-types/src/: lib.rs
helix-dap/src/: client.rs  lib.rs  registry.rs  transport.rs
helix-event/src/: lib.rs  registry.rs  test.rs
helix-loader/: Cargo.toml
helix-loader/src/: assets.rs  config.rs  grammar.rs  lib.rs
helix-lsp/: Cargo.toml
helix-lsp-types/src/: lib.rs  request.rs  semantic_tokens.rs  type_hierarchy.rs
helix-lsp/src/: client.rs  file_event.rs  lib.rs  transport.rs
helix-modal/: Cargo.toml
helix-modal/examples/: standalone.rs
helix-modal/src/: core.rs  factory.rs  helix.rs  lib.rs  populate.rs  registry.rs  vim.rs
helix-modal/src/core/: key.rs  mod.rs  registry.rs  tests.rs
helix-modal/src/core/engine/: helix.rs  mod.rs  vim.rs
helix-modal/tests/: engine_headless.rs
helix-pkg/: Cargo.toml
helix-pkg/src/: catalog.rs  config.rs  lib.rs  lock.rs  ops.rs  registry.rs  resolve.rs  spec.rs  store.rs
helix-plugin/: Cargo.toml  README.md
helix-plugin-api/: Cargo.toml
helix-plugin-api/src/: codec.rs  commands.rs  errors.rs  events.rs  handles.rs  host.rs  keymaps.rs  layout.rs  lib.rs  metadata.rs  requests.rs  snapshots.rs  tasks.rs  value.rs
helix-plugin-editor/: Cargo.toml
helix-plugin-editor/src/: adapt.rs  bridge.rs  lib.rs
helix-plugin/src/: lib.rs  types.rs
helix-plugin/src/contract/: adapt.rs  bridge.rs  codec.rs  errors.rs  events.rs  handles.rs  host.rs  metadata.rs  mod.rs  pkg.rs  requests.rs  snapshots.rs  value.rs
helix-plugin/src/lua/: context.rs  loader.rs  mod.rs
helix-plugin/src/lua/api/: buffer.rs  editor.rs  facade.rs  layout.rs  lsp.rs  mod.rs  surface.rs  ui.rs
helix-plugin/src/lua/api/facade/: documents.rs  host.rs  layout.rs  logging.rs  lsp.rs  syntax.rs  views.rs  workspace.rs
helix-plugin/src/rpc/: host_runner.rs  mod.rs  protocol.rs
helix-plugin/tests/: rpc_loopback.rs
helix-runtime/: Cargo.toml
helix-runtime/src/: admission.rs  block.rs  cancel.rs  clock.rs  debounce.rs  frame.rs  gate.rs  group.rs  latest.rs  lib.rs  mailbox.rs  pulse.rs  task.rs  test.rs  ui.rs  wait.rs  work.rs
helix-stdx/src/: lib.rs  paths.rs
helix-stdx/tests/: path.rs
helix-store/: Cargo.toml
helix-store/src/: backend.rs  dto.rs  error.rs  lib.rs  migrations.rs  repos.rs  schema.rs
helix-store/tests/: runtime_assets.rs  store.rs
helix-term/: Cargo.toml  build.rs
helix-term/src/: application.rs  args.rs  commands.rs  compositor.rs  config.rs  effect.rs  embed.rs  fff.rs  handlers.rs  health.rs  host.rs  keymap.rs  lib.rs  logging.rs  main.rs  migration.rs  plugin_registry.rs  render.rs  shutdown.rs  storybook.rs
helix-term/tests/: plugin_host.rs
helix-tui/: Cargo.toml
helix-tui/src/: buffer.rs  lib.rs  ratatui.rs  terminal.rs  text.rs
helix-tui/src/backend/: cell.rs  crossterm.rs  mod.rs  termina.rs  test.rs
helix-tui/tests/: terminal.rs
helix-vcs/: Cargo.toml
helix-vcs/src/: diff.rs  git.rs  jj.rs  lib.rs  status.rs
helix-view/: Cargo.toml
helix-view/src/: annotations.rs  bench.rs  content_region.rs  document.rs  document_lsp.rs  edit_region.rs  editor.rs  events.rs  expansion.rs  file_bound.rs  file_watcher.rs  graphics.rs  gutter.rs  handlers.rs  history_state.rs  icons.rs  id.rs  info.rs  input.rs  jump_labels.rs  keymap.rs  layout.rs  lib.rs  list_nav.rs  macros.rs  modal_text.rs  presentation_state.rs  register.rs  revision.rs  selection_store.rs  session_state.rs  snippet_state.rs  statusline.rs  statusline_mode.rs  syntax_aware.rs  text_buffer.rs  theme.rs  traits.rs  tree.rs  vcs_state.rs  (+2 more)
registry/: PENDING.md
registry/acp/: agoragentic-acp.toml  amp-acp.toml  auggie.toml  autohand.toml  claude-acp.toml  cline.toml  codebuddy-code.toml  codex-acp.toml  cortex-code.toml  corust-agent.toml  crow-cli.toml  cursor.toml  deepagents.toml  devin.toml  dimcode.toml  dirac.toml  factory-droid.toml  fast-agent.toml  gemini.toml  github-copilot-cli.toml  glm-acp-agent.toml  goose.toml  grok-build.toml  harn.toml  junie.toml  kilo.toml  kimi.toml  minion-code.toml  mistral-vibe.toml  nova.toml  opencode.toml  pi-acp.toml  poolside.toml  qoder.toml  qwen-code.toml  sigit.toml  stakpak.toml  vtcode.toml
registry/dap/: codelldb.toml  debugpy.toml  netcoredbg.toml
scripts/: mock-acp-agent.js
specs/: host-agnostic-plugin-api-migration.md  host-agnostic-plugin-api-sketches.md  host-agnostic-plugin-api.md
xtask/src/: main.rs  (+2 more)
(+339 files in other folders)
