[package]
name = "helix-modal"
description = "Modal editing engines for Helix"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["helix"]
helix = ["dep:helix-core", "dep:helix-view", "dep:log"]
bench = ["helix", "helix-core/bench", "helix-view/bench"]

[dependencies]
helix-core = { path = "../helix-core", optional = true }
helix-view = { path = "../helix-view", optional = true }
log = { version = "0.4", optional = true }

[[example]]
name = "standalone"
required-features = []

[dev-dependencies]
arc-swap.workspace = true
helix-loader = { path = "../helix-loader" }
helix-runtime = { path = "../helix-runtime" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
