[package]
name = "helix-plugin"
description = "Plugin system for Helix editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-loader = { path = "../helix-loader" }
helix-plugin-api = { path = "../helix-plugin-api" }

mlua = { version = "0.10", features = ["lua54", "async", "send", "serialize", "vendored"] }
anyhow = "1"
heck = "0.5"
thiserror.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
log = "0.4"
once_cell = "1.21"
parking_lot.workspace = true
toml.workspace = true

[dev-dependencies]
arc-swap.workspace = true
helix-core = { path = "../helix-core" }
helix-plugin-editor = { path = "../helix-plugin-editor" }
helix-runtime = { path = "../helix-runtime" }
helix-view = { path = "../helix-view" }
tempfile.workspace = true

[[bin]]
name = "helix-plugin-host"
path = "src/bin/plugin-host.rs"
