[package]
name = "helix-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
parking_lot.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros", "test-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
