[package]
name = "helix-tui"
description = """A library to build rich terminal user interfaces or dashboards"""
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["termina", "crossterm", "ratatui"]
ratatui = []

[dependencies]
helix-view = { path = "../helix-view", features = ["term"] }
helix-core = { path = "../helix-core" }

bitflags.workspace = true
unicode-segmentation.workspace = true
termina = { workspace = true, optional = true }
termini = "1.0"
once_cell = "1.21"
log = "~0.4"
ratatui = { version = "0.30", default-features = false, features = [
  "std",
  "layout-cache",
  "underline-color",
  "scrolling-regions",
] }

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.28", optional = true }
